kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rca-app
spec:
  type: ClusterIP
  selector:
    app: rca-app
  ports:
    - name: http
      port: 80
      targetPort: http
